# EFX

./: .gitignore  CMakeLists.txt  README.md  check.py  common.cpp  main.cpp  main.py  pyproject.toml  run-cpp.sh  soplex-prover.cpp  working.cpp
.github/workflows/: release-papers.yml
experiments/: bench.out  bench.sh  bench_arith2.out  bench_arith2.sh  bench_w0.out  bench_w0.sh  bench_w00.sh  efx_exp.cpp  efx_exp.x  efx_exp2.x  efx_exp3.x  efx_opt.cpp  efx_opt.x  raw_arith2.txt  raw_opt.txt  raw_results.txt  raw_results_w0.txt  raw_results_w00.txt  results.md  sweep_hard.out  sweep_hard.sh
proofs/: problem_4_6.smt2  problem_4_7.smt2
tex/: Makefile  README.md  efx.aux  efx.bbl  efx.bcf  efx.bib  efx.blg  efx.out  efx.run.xml  efx.tex  efx.toc
